# pypoet

./: pyproject.toml
poetry-demo/: README.md  pyproject.toml
poetry-demo/poetry_demo/: main.py
