[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["segfal <segfaultboi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
